--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section id="about">
         <div class="container">
-            <img src="C:\Users\user\OneDrive\Desktop\bharath intern\Task-1\image2.jpeg" alt="Your Name" class="profile-photo">
+            <img src="image2.jpeg" alt="Your Name" class="profile-photo">
             <h1>Bodangi Sree Rishi Sai Preetham</h1>
             <p><p> Greetings from my portfolio webpage. I am a committed student presently pursuing a B.Tech in Computer Science and Engineering (CSE) in my third year of study. I've been developing my abilities and learning more about the exciting field of technology over the past few years. I have a solid foundation in a variety of programming languages, data structures, and algorithms because to my experience at CSE. My enthusiasm lies in using technology to address practical issues, and I'm excited to share my experiences and ongoing projects with you.</p></p>
         </div>
